--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/rust
 {
 	"name": "Rust",
-	"image": "mcr.microsoft.com/devcontainers/rust:1-buster",
+	"image": "mcr.microsoft.com/devcontainers/rust:0.203.2-1-buster",
 	"customizations": {
 		"vscode": {
 			"extensions": [
